# llm-council

./: .gitignore  .gitleaks.toml  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  enforcement_results.txt  enforcement_results_2.txt  how_to_use_llm_council_with_claude_desktop.md  llm_council.yaml  llm_council.yaml.example  mkdocs.yml  pyproject.toml  query.py  server-card.json  sonar-project.properties  test_output.txt  violations.txt
.epic-loop/: config.yaml
.github/: CODEOWNERS
.semgrep/: llm-security.yaml
bench/: METHODOLOGY.md
docs/: api.md  roadmap-2026-h2.md
plan/: implementation_plan_adversarial_da_04092026.md  implementation_plan_constructive_dissent_04092026.md  implementation_plan_default_balanced_04202026.md  implementation_plan_model_centralization_v2_04122026.md  implementation_plan_phase_3_test_refactoring.md  implementation_plan_regression_stabilization.md  implementation_plan_regression_stabilization_v2.md  implementation_plan_regression_stabilization_v3.md  implementation_plan_regression_stabilization_v4.md  task_list_observability_04052026.md
scratch/: migrate_datetimes.py
tests/: conftest.py  test_adjudication_metric.py  test_adr040_timeout_guardrails.py  test_adversarial_logic.py  test_ai_generation.py  test_audition_selection.py  test_audition_tracker.py  test_audition_transitions.py  test_audition_types.py  test_audition_voting.py  test_bench_harness.py  test_bench_matrix.py  test_bench_publication.py  test_bias_amplification.py  test_bias_audit.py  test_bias_persistence.py  test_budget.py  test_bug_002_openrouter_attribution.py  test_bug_023.py  test_bug_044.py  test_cache.py  test_cache_injection.py  test_cache_telemetry.py  test_centralization_enforcement.py  test_chairman_disabled.py  test_circuit_breaker_registry.py  test_circuit_breaker_selection.py  test_confidence_calibration.py  test_config.py  test_cost_ceiling.py  test_cost_per_quality.py  test_cost_resolver.py  test_cost_summary.py  test_council.py  test_council_cost_aggregation.py  test_council_reliability.py  test_deployment.py  test_directory_expansion.py  test_discovery.py  test_dissent_integration.py  (+108 more)
(+186 files in other folders)
