[project]
name = "llm-council-mcp"
dynamic = ["version"]
description = "MCP server that consults multiple LLMs and provides synthesized guidance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Amiable" }]
maintainers = [{ email = "contact@amiable.dev" }]
keywords = [
    "mcp",
    "llm",
    "ai",
    "openrouter",
    "model-context-protocol",
    "claude",
    "gpt",
    "gemini",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = ["python-dotenv>=1.0.0", "httpx>=0.27.0", "mcp>=1.22.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/amiable-dev/llm-council-mcp"
Repository = "https://github.com/amiable-dev/llm-council-mcp"
Issues = "https://github.com/amiable-dev/llm-council-mcp/issues"
Documentation = "https://github.com/amiable-dev/llm-council-mcp#readme"

[project.scripts]
llm-council = "llm_council_mcp.mcp_server:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/llm_council_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_council_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]                  # Line too long (handled by formatter)
